[package]
name = "nannou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fstrings = "0.2.3"
itertools = "0.10.5"
nannou = "0.17"
ndarray = { version = "0.15.6", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.7.0"
